Refactor: LottoRank 메서드 간소화 및 테스트 코드 수정